Fix(frontend): Enable dark mode
Changes the `color-scheme` of the root element to enable dark mode.

--- a/frontend/srcs/output.css
+++ b/frontend/srcs/output.css
@@ -3132,7 +3132,7 @@ video {
   will-change: transform;
 }
 
-:root,.light,[data-theme="light"] {
+:root,.light,[data-theme="dark"] {
   color-scheme: light;
   --nextui-background: 0 0% 100%;
   --nextui-foreground-50: 0 0% 98.04%;
